[gd_scene load_steps=3 format=3 uid="uid://dqkxk4q3gk26s"]

[ext_resource type="Script" path="res://aircraft_controller_label.gd" id="1_631co"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m5acy"]
bg_color = Color(0, 0, 0, 0.568627)
corner_radius_top_left = 15
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 15

[node name="aircraft_controller_strip" type="Button"]
custom_minimum_size = Vector2(250, 70)
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -35.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_m5acy")
script = ExtResource("1_631co")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
alignment = 1

[node name="left" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="callsign" type="Label" parent="HBoxContainer/left"]
unique_name_in_owner = true
layout_mode = 2
text = "SAS1445"

[node name="arriving_departing" type="Label" parent="HBoxContainer/left"]
unique_name_in_owner = true
layout_mode = 2
text = "Departing"

[node name="right" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="aircraft_type" type="Label" parent="HBoxContainer/right"]
unique_name_in_owner = true
layout_mode = 2
text = "A32N"
horizontal_alignment = 2

[node name="status" type="Label" parent="HBoxContainer/right"]
unique_name_in_owner = true
layout_mode = 2
text = "Taxiing"
horizontal_alignment = 2

[connection signal="pressed" from="." to="." method="_on_pressed"]
